# influenza-database-pipeline

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  app.py  dashboard.py  queries.py  routes.py
dags/: flu_pipeline_dag.py
docker/: airflow.Dockerfile  api.Dockerfile  postgres-init.sql
flu_pipeline/: __init__.py  config.py  pipeline.py
flu_pipeline/db/: __init__.py  engine.py  load.py  schema.py
flu_pipeline/sources/: __init__.py  census.py  fluview.py  rhino.py
flu_pipeline/transform/: __init__.py  county_region.py  healthcare.py  historics.py  illness.py  temporal.py
scripts/: seed_database.py
tests/: conftest.py  test_api.py  test_contract.py  test_sources.py  test_transforms.py
