[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flu-pipeline"
version = "1.0.0"
description = "Washington State influenza surveillance ETL pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=1.4",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = [
    "flask>=2.2",
    "flask-cors>=4.0",
    "gunicorn>=21.2",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["flu_pipeline*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
